--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ body {
   margin-bottom: 48px;
 }
 
-.order-btn {
+.btn {
   font-weight: 500;
   font-size: 16px;
 
@@ -248,19 +248,19 @@ body {
   padding: 16px 32px;
   border: none;
   min-width: 169px;
-  height: 56px;
+  min-height: 56px;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.order-btn:hover,
-.order-btn:focus {
+.btn:hover,
+.btn:focus {
   background-color: #404bbf;
 }
 /* #endregion */
 
 /* #region Benefits */
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -268,7 +268,7 @@ body {
   border: 0;
   padding: 0;
   white-space: nowrap;
-  clip-path: inset(100%);
+  clip-path: inset(50%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
@@ -424,7 +424,8 @@ body {
   max-width: 264px;
 }
 
-.footer-socials-wrap .dscr {
+.footer-socials-wrap .dscr,
+.subscribe-wrap .dscr {
   color: #fff;
   font-weight: 500;
   margin-bottom: 16px;
@@ -441,5 +442,297 @@ body {
 .footer-socials-link:hover,
 .footer-socials-link:focus {
   background-color: #31d0aa;
+}
+
+.subscribe-wrap {
+  margin-left: auto;
+}
+
+.subscribe-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-input::placeholder {
+  color: #ffffff;
+}
+
+.btn-sub {
+  display: flex;
+  color: #fff;
+  padding: 8px 24px;
+  min-width: 165px;
+  min-height: 40px;
+}
+
+.icon-plane {
+  fill: #fff;
+  width: 24px;
+  height: 24px;
+  margin-left: 16px;
+}
+
+.footer-form {
+  display: flex;
+  align-items: baseline;
+  gap: 24px;
+}
+/* #endregion */
+
+/* #region Modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -70%);
+
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  padding: 72px 24px 24px 24px;
+
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open .modal {
+  transform: translate(-50%, -50%);
+}
+
+.backdrop:not(.is-open) .modal {
+  transform: translate(-50%, -100%);
+}
+
+.modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  border-radius: 50%;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  fill: #2e2f42;
+  cursor: pointer;
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  border-color: #404bbf;
+  background-color: #404bbf;
+}
+
+.modal-btn:hover .modal-btn-icon,
+.modal-btn:focus .modal-btn-icon {
+  fill: #fff;
+}
+
+.modal-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2e2f42;
+}
+
+.modal-caption {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+
+  margin-bottom: 16px;
+}
+
+.modal-form-field {
+  margin-bottom: 16px;
+}
+
+.modal-form-label {
+  display: block;
+  margin-bottom: 4px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.modal-form-wrapper {
+  position: relative;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding: 14px 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  border-color: rgb(77, 90, 229);
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: #4d5ae5;
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  resize: none;
+  padding: 8px 16px;
+  outline: transparent;
+
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message:focus {
+  border-color: rgb(77, 90, 229);
+}
+
+.modal-form-message::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+}
+/* #endregion */
+
+/* #region Custom checkbox ver 1.0 */
+input[type="checkbox"]:checked
+  + .modal-form-agremeent-text
+  .modal-form-checkbox {
+  background-color: #404bbf;
+  border-color: 1px solid #404bbf;
+  fill: #f4f4fd;
+}
+
+input[type="checkbox"]:not(:checked)
+  + .modal-form-agremeent-text
+  .modal-form-checkbox
+  .modal-form-checkbox-icon {
+  opacity: 0;
+}
+
+input[type="checkbox"]:focus-visible
+  + .modal-form-agremeent-text
+  .modal-form-checkbox {
+  outline: 2px solid #4d5ae5;
+  outline-offset: 2px;
+}
+
+.modal-form-agremeent {
+  margin-bottom: 24px;
+}
+
+.modal-form-agremeent-text {
+  font-size: 12px;
+
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.modal-form-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 16px;
+  height: 16px;
+  margin-right: 12px;
+
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-checkbox-icon {
+  fill: #f4f4fd;
+}
+
+.modal-form-link {
+  line-height: 133%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.agremeent-btn {
+  display: block;
+  margin: 0 auto;
 }
 /* #endregion */
