--- a/css/styles.css
+++ b/css/styles.css
@@ -361,7 +361,7 @@ body {
   flex-wrap: wrap;
   column-gap: 24px; /* Горизонтальна відстань між картками */
   row-gap: 48px;
-  width: ((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-text {
@@ -469,6 +469,8 @@ body {
 
 .btn-sub {
   display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fff;
   padding: 8px 24px;
   min-width: 165px;
@@ -564,8 +566,8 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #e7e9fc;
   border-radius: 50%;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   fill: #2e2f42;
   cursor: pointer;
@@ -573,6 +575,7 @@ body {
 
 .modal-btn:hover,
 .modal-btn:focus {
+  border: none;
   border-color: #404bbf;
   background-color: #404bbf;
 }
@@ -599,7 +602,7 @@ body {
 }
 
 .modal-form-field {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .modal-form-label {
@@ -624,6 +627,7 @@ body {
   border-radius: 4px;
   padding: 14px 38px;
   outline: transparent;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -637,6 +641,7 @@ body {
   left: 16px;
   transform: translateY(-50%);
   pointer-events: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus + .modal-form-icon {
@@ -646,6 +651,8 @@ body {
 .modal-form-message {
   width: 100%;
   height: 120px;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   resize: none;
@@ -673,8 +680,9 @@ input[type="checkbox"]:checked
   + .modal-form-agremeent-text
   .modal-form-checkbox {
   background-color: #404bbf;
-  border-color: 1px solid #404bbf;
+  border: 1px solid #404bbf;
   fill: #f4f4fd;
+  border: none;
 }
 
 input[type="checkbox"]:not(:checked)
@@ -716,8 +724,10 @@ input[type="checkbox"]:focus-visible
   border-radius: 2px;
 
   cursor: pointer;
+  fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-checkbox-icon {
