before the third sending for checking

--- a/css/styles.css
+++ b/css/styles.css
@@ -605,6 +605,10 @@ body {
   margin-bottom: 8px;
 }
 
+.modal-form-field-comment {
+  margin-bottom: 16px;
+}
+
 .modal-form-label {
   display: block;
   margin-bottom: 4px;
